# the-director

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: director.md
examples/subscription-creep/: brief.md  scene-map.json  script.md
knowledge/: pre_production.md  script_and_copy.md
src/director/: __init__.py  agent.py  models.py  prompts.py  tools.py  validator.py
src/pipeline/: router.py
tests/: test_director.py
